<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewContact">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/enter_name"
            style="@style/formStyle"
            android:layout_width="395dp"
            android:hint="@string/name_hint"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/enter_occupation"
            style="@style/formStyle"
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/occupation_hint"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/enterPhoneNo"
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Phone Number"
            android:inputType="textPersonName"
            android:padding="@dimen/general_padding" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="392dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/general_padding"
            android:text="@string/save_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/update_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center"
                android:padding="@dimen/general_padding"
                android:text="@string/update_text" />

            <Button
                android:id="@+id/delete_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginEnd="1dp"
                android:gravity="center"
                android:paddingHorizontal="@dimen/general_padding"
                android:text="@string/delete_text" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>